--- a/index.Rmd
+++ b/index.Rmd
@@ -48,7 +48,9 @@ Lecture for the position "Assistant Professor progressing the transition to futu
 
 ???
 
-You have my resume and all information you need to understand the my technical career. I prepared this presentation to let you know who I am, how my previous experiences as an engineer, teacher and researcher has shaped me and my expectations of opportunities in Chalmers and how can I contribute to Chalmers.   
+You have my resume and all information you need to understand the my technical career. 
+
+I prepared this presentation to let you know who I am, and how my previous experiences as an engineer, teacher and researcher has shaped me. And, of course, mu plans and expectations of opportunities in Chalmers and how I can contribute to Chalmers.   
 
 ---
 class: inverse
@@ -160,12 +162,9 @@ knitr::include_graphics("img/bh.png")
 
 ???
 
-
-
 For those of you that do not know where Belo Horizonte is, here is a little hint! 
 
 ---
-
 background-image: url(img/young.png)
 background-size: cover
 
@@ -197,7 +196,11 @@ knitr::include_graphics("img/understanding1.png")
 
 ???
 
-These were times to get a Bachelor's and Master's degree, a Postgraduation diploma, some professional experience and a lot of teaching experience! And a lot of LOVE! I kept expanding my ecumene and enhancing distances from the real tangible world (besides motherhood! what a well-grounded challenge!)
+These were times to get a Bachelor's and Master's degree, a Postgraduation diploma, some professional experience and a lot of teaching experience! 
+
+And a lot of LOVE! 
+
+I kept expanding my ecumene and enhancing distances from the real tangible world (besides motherhood! what a well-grounded challenge!)
 
 ---
 class: center
@@ -213,15 +216,12 @@ knitr::include_graphics("img/forma2.png")
 
 By the end of 2001, I got my Civil Engineering Bachelors' degree. But.... 
 
-During my undergraduate studies, I explored possibilities that were a game changer in my professional journey. 
-
-I was a member of the students council and responsible for institutional representation of s students body
-
-I joined an Undergrauduate Program for Scientific Initiation in the project entitled “Residential Mobility and Transportation System in the Metropolitan Region of Belo Horizonte”.
+“Residential Mobility and Transportation System in the Metropolitan Region of Belo Horizonte”.
 
 And in my final semester, I enrolled myself in transportation engineering courses. 
 
 Transportation was the only field of knowledge in my course that allowed me to identify challenges directly related to people. 
+
 ---
 
 ## M.Sc. Transportation Engineering
@@ -243,7 +243,11 @@ knitr::include_graphics("img/ime2.png")
 ]]
 
 ???
-I wasn't sure I was well instructed to work as an transportation engineer. So I decided to get a master's degree. Once more, my ecumene expanded to Rio de Janeiro! But, since I had been working since I was 16 years-old, I decided to go back to Belo Horizonte and work while finishing the thesis. In the mean time.... 
+I wasn't sure I was well instructed to work as an transportation engineer. 
+
+So I decided to get a master's degree. Once more, my ecumene expanded to Rio de Janeiro!
+
+But, since I had been working since I was 16 years-old, I decided to go back to Belo Horizonte and work while finishing the thesis. In the mean time.... 
 
 ---
 
@@ -281,6 +285,9 @@ knitr::include_graphics("img/systra-architects.png")
 ```
 ]
 
+???
+
+I work both as consultant and as rail engineer in private companies. In both contexts, I assumed responsability for planning and programming transportation systems. 
 
 ---
 
@@ -304,7 +311,7 @@ Department of Transportation Engineering and Geotechnics - UFMG
 
 ???
 
-Teaching is not an activity characterized by a chronological time frame. Since I started teaching, I felt that the interaction with students was extremely joyful. This activity brought me closer to people. 
+Teaching is not an activity characterized by a chronological time frame. Since I started teaching, I felt that the interaction with students was extremely joyful. This was the first professional activity that made me feel closer to people. 
 
 Along with my studies, I experimented teaching... English teacher, lecturer in different institution.
 
@@ -591,7 +598,7 @@ Why Chalmers and where to go...
 ## Why Chalmers? 👩 🏫 🎓 🕵 🔗
 
 .bigger[
-- **Innovative projects** for **knowledge production** to contribute for a **more sustainable, happy and equitable world**
+- **Innovative projects** for **knowledge production** to contribute for a **more sustainable, happy and equitable world** through integrated planning for mobility systems, land use, location of activities and regulation.
 ]
 
 --
@@ -613,7 +620,7 @@ Why Chalmers and where to go...
 
 ---
 
-## Why Chalmers? 🢃 👩 🏫 🎓 🕵 🔗
+## Why Chalmers? 👩 🏫 🎓 🕵 🔗
 
 .bigger[
 - Opportunities for collaboration with **companies**, **policy-makers** and **society** (**Living Labs**)
@@ -638,11 +645,15 @@ background-size: cover
 
 ???
 
-This is not a research framework, but a structure that unfolds the ultimate goal into dimensions for proposing research questions and the theories and methods that can help explore methodological approaches in scientific investigation in the Transport Area of Advance  and in collaboration among related Departments. 
+This is not a research framework, but a structure that unfolds the ultimate goal into
+
+- dimensions for proposing research questions and 
+
+- the theories and methods that can help explore methodological approaches in scientific investigation in the Transport Area of Advance and in collaboration among related Departments. 
 
 ---
 
-## Expected internal collaboration at Chalmers .center[🢃 👩 🢃 🏫 🢃 🎓 🢃 🔗]
+## Expected internal collaboration at Chalmers .center[ 👩 + 🏫 + 🎓 + 🔗]
 
 Department | Collaboration
 -----------|--------------
@@ -678,7 +689,7 @@ Space Earth and Environment (SEE) | Behaviour, energy, emissions, travel demand,
 ## Why me? 
 
 .bigger[
-- I have **multidisciplinary** education and professional experience. This can be a great asset for Chalmers to address current **societal and corporate challenges** and help coordinate internal and external **collaboration**
+- Besides working with transportation my entire carrer, I have **multidisciplinary** education and professional experience. This can be a great asset for Chalmers to address current **societal and corporate challenges** and help coordinate internal and external **collaboration**
 ]
 
 --
@@ -714,7 +725,7 @@ background-size: cover
 Keep reducing distances and expanding interactions for a better world! <br>
 <br>
 <br>
- 👩 ➕ 🏫 ➕🎓 ➕ 🕵 ➕🌎
+ 👩 + 🏫 + 🎓 + 🕵 + 🌎
 ]]
 ---
 
