--- a/index.Rmd
+++ b/index.Rmd
@@ -768,4 +768,40 @@ THANK YOU!
 &nbsp;
 
 ]
+---
 
+## LOVE!
+
+```{r nos3, echo=FALSE, message=FALSE, warning=FALSE, out.width="70%"}
+knitr::include_graphics("img/nos3.jpg")
+```
+
+---
+
+## LOVE!
+.pull-left[
+```{r sofia, echo=FALSE,  message=FALSE, warning=FALSE, out.width="70%"}
+knitr::include_graphics("img/sofia1.png")
+```
+]
+
+.pull-right[
+```{r sofia2, echo=FALSE, message=FALSE, warning=FALSE, out.width="50%"}
+knitr::include_graphics("img/sofia2.png")
+```
+]
+---
+
+## LOVE!
+.pull-left[
+```{r joao, echo=FALSE, message=FALSE, warning=FALSE, out.width="80%"}
+knitr::include_graphics("img/joao1.png")
+```
+]
+
+.pull-right[
+
+```{r joao2, echo=FALSE, message=FALSE, warning=FALSE, out.width="60%"}
+knitr::include_graphics("img/joao2.png")
+```
+]
